tests/error/poly_errors_py312/linear_by_default.err
Error: Copy violation (at $FILE:9:14)
  | 
7 | def foo[T](x: T @ owned) -> tuple[T, T]:
8 |     # T is not copyable
9 |     return x, x
  |               ^ Variable `x` with non-copyable type `T` cannot be returned
  |                 ...

Note:
  | 
8 |     # T is not copyable
9 |     return x, x
  |            - Variable `x` already returned here

Guppy compilation failed due to 1 previous error
